# routes/api.php
@@ -3,6 +3,7 @@
 use App\Http\Controllers\Api\V1\AthleteAppController;
 use App\Http\Controllers\Api\V1\AuthController;
 use App\Http\Controllers\Api\V1\CoachAppController;
+use App\Http\Controllers\Api\V1\CoachManagementController;
 use App\Http\Controllers\Api\V1\MessagingController;
 use App\Http\Controllers\Api\V1\OrganizationController;
 use App\Http\Controllers\Api\V1\ProfileController;
@@ -57,7 +58,21 @@ Route::prefix('v1')->group(function (): void {
             Route::get('/roster', [CoachAppController::class, 'roster'])->middleware('can:athletes.view');
             Route::get('/athletes/{athlete}', [CoachAppController::class, 'athlete'])->middleware('can:athletes.view');
             Route::get('/programs', [CoachAppController::class, 'programs'])->middleware('can:programs.manage');
+            Route::post('/programs', [CoachManagementController::class, 'storeProgram'])->middleware('can:programs.manage');
+            Route::get('/programs/{program}', [CoachManagementController::class, 'program'])->middleware('can:programs.manage');
+            Route::put('/programs/{program}', [CoachManagementController::class, 'updateProgram'])->middleware('can:programs.manage');
+            Route::post('/programs/{program}/phases', [CoachManagementController::class, 'storePhase'])->middleware('can:programs.manage');
+            Route::post('/programs/{program}/sessions', [CoachManagementController::class, 'storeSession'])->middleware('can:programs.manage');
+            Route::put('/programs/{program}/sessions/{session}', [CoachManagementController::class, 'updateSession'])->middleware('can:programs.manage');
+            Route::post('/programs/{program}/assignments', [CoachManagementController::class, 'assignProgram'])->middleware('can:programs.manage');
+            Route::patch('/assignments/{assignment}/status', [CoachManagementController::class, 'assignmentStatus'])->middleware('can:programs.manage');
             Route::get('/schedule', [CoachAppController::class, 'schedule'])->middleware('can:schedule.manage');
+            Route::patch('/schedule/{workout}/reschedule', [CoachManagementController::class, 'reschedule'])->middleware('can:schedule.manage');
+            Route::get('/exercises', [CoachManagementController::class, 'exercises'])->middleware('can:exercises.manage');
+            Route::get('/invitations', [CoachManagementController::class, 'invitations'])->middleware('can:invitations.manage');
+            Route::post('/invitations', [CoachManagementController::class, 'storeInvitation'])->middleware('can:invitations.manage');
+            Route::post('/invitations/{invitation}/resend', [CoachManagementController::class, 'resendInvitation'])->middleware('can:invitations.manage');
+            Route::delete('/invitations/{invitation}', [CoachManagementController::class, 'cancelInvitation'])->middleware('can:invitations.manage');
         });
     });
 });
